# retro-rpg-ai-harness

./: .importlinter  AGENTS.md  IDEA.md  LICENSE  README.md  Taskfile.yml  lefthook.yml  main.py  mise.toml  pyproject.toml  ruff.toml
.opencode/: README.md  bun-playground.ts  opencode.json  package-lock.json  package.json  tsconfig.json
.opencode/plugins/: env-protection.ts  lint-imports-after-edit.ts  mypy-check-after-edit.ts  ruff-after-edit.ts  ruff-lint-after-edit.ts  utils.ts
app/: __init__.py
app/game/: battle.py  exp.py  tui.py
app/models/: character_model.py  enemy_data.py  enemy_model.py  player_model.py
docs/superpowers/plans/: 2026-04-25-rpg-enhancements-plan.md  2026-04-25-simple-rpg-plan.md
docs/superpowers/specs/: 2026-04-25-rpg-enhancements-design.md  2026-04-25-simple-rpg-design.md
tests/game/: test_battle.py  test_exp.py
tests/models/: test_enemy_model.py  test_player_model.py
