[project]
name = "retro-rpg-ai-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "pytest>=8.0.0",
    "mypy>=1.20.2",
    "import-linter>=2.11",
]

